<resources>
    <string name="app_name">Noted</string>

    <!-- Dialogs -->
    <string name="delete_all_confirm_title">Confirm</string>
    <string name="delete_all_confirm_message">
        Are you sure you want to delete all your notes?</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="add_note_title">New Note</string>
    <string name="add_new_note_explanation">Please include one hashtag in your note.</string>
    <string name="edit_note_explanation">Please include one hashtag in your note.</string>

    <!--Menu item titles -->
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="sort">Sort</string>
    <string name="sort_a_to_z">Sort by key phrase: A to Z</string>
    <string name="sort_z_to_a">Sort by key phrase: Z to A</string>
    <string name="sort_by_order_of_entry_ascending">Oldest notes first</string>
    <string name="sort_by_order_of_entry_descending">Newest notes first</string>
    <string name="delete">Delete</string>

    <!-- Empty state -->
    <string name="empty_state_text">There is note-ing here</string>

    <!-- Hints -->
    <string name="add_note_text_hint">New note</string>

    <!-- Error messages -->
    <string name="error_note_text_entry_blank">Enter a note</string>
    <string name="error_hashtag_missing">Please include a hashtag within the note</string>
    <string name="error_multiple_hashtags">Please include only one hashtag</string>
    <string name="error_invalid_hashtag">Next character after # should be letter or number</string>
    <string name="error_invalid_entry">Invalid entry</string>
    <string name="error_listener_implementation_missing">Host should implement fragment interface.</string>

    <!-- Success messages -->
    <string name="note_updated">Note updated!</string>
    <string name="note_inserted">New note created!</string>
    <string name="all_notes_deleted">All notes deleted!</string>
    <string name="selected_notes_deleted">Selected notes deleted!</string>

    <!-- Buttons -->
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>

</resources>