<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rudysolano.noted.MainActivity">

    <item
        android:id="@+id/delete_all"
        android:orderInCategory="100"
        android:title="@string/delete_all_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="102"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/sort_a_to_z"
                android:orderInCategory="50"
                android:title="@string/sort_a_to_z" />

            <item
                android:id="@+id/sort_z_to_a"
                android:orderInCategory="51"
                android:title="@string/sort_z_to_a" />

            <item
                android:id="@+id/sort_entry_order_descending"
                android:orderInCategory="52"
                android:title="@string/sort_by_order_of_entry_descending" />

            <item
                android:id="@+id/sort_entry_order_ascending"
                android:orderInCategory="53"
                android:title="@string/sort_by_order_of_entry_ascending" />

        </menu>

    </item>

</menu>